Bug 134129 - Skia: Image is blurry in edit mode, if 'Force Skia software rendering' is off
Summary: Skia: Image is blurry in edit mode, if 'Force Skia software rendering' is off
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisectRequest, regression
: 134352 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-06-18 18:06 UTC by Regina Henschel
Modified: 2020-07-01 12:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Line and image of that lines (20.02 KB, application/vnd.oasis.opendocument.presentation)
2020-06-18 18:06 UTC, Regina Henschel
Details
Presentation canvas with Skia Vulkan rendering showing PNG images blurred (202.15 KB, image/png)
2020-06-18 22:19 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-06-18 18:06:22 UTC
Created attachment 162187 [details]
Line and image of that lines

Make sure Skia is enabled and option "Force Skia software rendering" is off.

Open attached document. It contains three lines and below each line a screenshot, how it looks in LO 6.4.
Notice that the images are blurry. The rendering is OK in presentation mode.

I see the error in Version: 7.1.0.0.alpha0+ (x64)
Build ID: ba33a51ff1eb34a5983870dcb50e975002e6d3a4
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL

It was OK in Version: 7.0.0.0.beta1+ (x64)
Build ID: 900ffff8b5718113e5b3ab7e9fbf35b999661c39
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 1 V Stuart Foote 2020-06-18 22:19:04 UTC
Created attachment 162192 [details]
Presentation canvas with Skia Vulkan rendering showing PNG images blurred
Comment 2 V Stuart Foote 2020-06-18 22:21:40 UTC
Confirming. The images on canvas are saved to ODF archive as PNG. But all three are being blurred when rendered to canvas.

Windows 10 Ent 64-bit en-US with TB77 2020-06-16 build

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 33a720ab802491f15b247e09755cd36205b6f435
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 3 V Stuart Foote 2020-06-18 22:22:45 UTC
Skia log:
RenderMethod: vulkan
Vendor: 0x10de
Device: 0xffe
API: 1.1.119
Driver: 442.296.0
DeviceType: discrete
DeviceName: Quadro K2000
Blacklisted: no
Comment 4 Commit Notification 2020-06-19 10:59:17 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d70eb43f3a301750a7bc1c0afa06d423a7eca69

fix coordinate typo in Skia drawTransformedBitmap() (tdf#134129)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2020-06-19 12:57:38 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/17c7cff57d574a041e7cc574ebf9bb59be4b2395

fix coordinate typo in Skia drawTransformedBitmap() (tdf#134129)

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Luboš Luňák 2020-07-01 12:06:19 UTC
*** Bug 134352 has been marked as a duplicate of this bug. ***