fix coordinate typo in Skia drawTransformedBitmap() (tdf#134129)

Change-Id: I562aae9f55701477acd6b5d2cc8a556f3449ecb5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96688
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>